refactor: update plugin name to LineNotifyBuilder

--- a/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Please set a name
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=Isn't the name too short?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=Are you actually French?
+LineNotifyBuilder.DescriptorImpl.errors.missingName=Please set a name
+LineNotifyBuilder.DescriptorImpl.warnings.tooShort=Isn't the name too short?
+LineNotifyBuilder.DescriptorImpl.warnings.reallyFrench=Are you actually French?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Say hello world
+LineNotifyBuilder.DescriptorImpl.DisplayName=Message to send
