--- a/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_pt_BR.properties
+++ b/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_pt_BR.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Insira um nome
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=Este nome n\u00E3o \u00E9 muito curto?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=Voc\u00EA \u00E9 realmente franc\u00EAs?
+LineNotifyBuilder.DescriptorImpl.errors.missingName=Insira um nome
+LineNotifyBuilder.DescriptorImpl.warnings.tooShort=Este nome n\u00E3o \u00E9 muito curto?
+LineNotifyBuilder.DescriptorImpl.warnings.reallyFrench=Voc\u00EA \u00E9 realmente franc\u00EAs?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Diz ol\u00E1 mundo
+LineNotifyBuilder.DescriptorImpl.DisplayName=Diz ol\u00E1 mundo
