--- a/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_es.properties
+++ b/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_es.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Establecer un nombre
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=\u00BFNo es el nombre demasiado corto?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=\u00BFEs usted realmente franc\u00E9s?
+LineNotifyBuilder.DescriptorImpl.errors.missingName=Establecer un nombre
+LineNotifyBuilder.DescriptorImpl.warnings.tooShort=\u00BFNo es el nombre demasiado corto?
+LineNotifyBuilder.DescriptorImpl.warnings.reallyFrench=\u00BFEs usted realmente franc\u00E9s?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Di hola mundo
+LineNotifyBuilder.DescriptorImpl.DisplayName=Di hola mundo
