--- a/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_fr.properties
+++ b/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_fr.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Veuillez saisir un nom
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=Le nom n'est-il pas trop court ?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=\u00CAtes vous vraiment fran\u00E7ais ?
+LineNotifyBuilder.DescriptorImpl.errors.missingName=Veuillez saisir un nom
+LineNotifyBuilder.DescriptorImpl.warnings.tooShort=Le nom n'est-il pas trop court ?
+LineNotifyBuilder.DescriptorImpl.warnings.reallyFrench=\u00CAtes vous vraiment fran\u00E7ais ?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Dis hello world
+LineNotifyBuilder.DescriptorImpl.DisplayName=Dis hello world
