--- a/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_it.properties
+++ b/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_it.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=Nome \u00E8 richiesto
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=Nome dev'essere al meno 4 charatteri
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=Vuole mostrare il messagio in francese?
+LineNotifyBuilder.DescriptorImpl.errors.missingName=Nome \u00E8 richiesto
+LineNotifyBuilder.DescriptorImpl.warnings.tooShort=Nome dev'essere al meno 4 charatteri
+LineNotifyBuilder.DescriptorImpl.warnings.reallyFrench=Vuole mostrare il messagio in francese?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Nome di mostrare
+LineNotifyBuilder.DescriptorImpl.DisplayName=Nome di mostrare
