--- a/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_tr.properties
+++ b/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages_tr.properties
@@ -1,5 +1,5 @@
-HelloWorldBuilder.DescriptorImpl.errors.missingName=L\u00FCtfen bir isim girin
-HelloWorldBuilder.DescriptorImpl.warnings.tooShort=\u0130sminiz \u00E7ok k\u0131sa de\u011Fil mi?
-HelloWorldBuilder.DescriptorImpl.warnings.reallyFrench=Ger\u00E7ekten Frans\u0131z m\u0131s\u0131n\u0131z?
+LineNotifyBuilder.DescriptorImpl.errors.missingName=L\u00FCtfen bir isim girin
+LineNotifyBuilder.DescriptorImpl.warnings.tooShort=\u0130sminiz \u00E7ok k\u0131sa de\u011Fil mi?
+LineNotifyBuilder.DescriptorImpl.warnings.reallyFrench=Ger\u00E7ekten Frans\u0131z m\u0131s\u0131n\u0131z?
 
-HelloWorldBuilder.DescriptorImpl.DisplayName=Merhaba d\u00FCnya de
+LineNotifyBuilder.DescriptorImpl.DisplayName=Merhaba d\u00FCnya de
