refactor: remove unused properties

--- a/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages.properties
@@ -1,5 +1,5 @@
 LineNotifyBuilder.DescriptorImpl.errors.missingName=Please set a name
-LineNotifyBuilder.DescriptorImpl.warnings.tooShort=Isn't the name too short?
+LineNotifyBuilder.DescriptorImpl.warnings.tooShort=Is not the name too short?
 LineNotifyBuilder.DescriptorImpl.warnings.reallyFrench=Are you actually French?
 
-LineNotifyBuilder.DescriptorImpl.DisplayName=Message to send
+LineNotifyBuilder.DescriptorImpl.DisplayName=Line notify
