--- a/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/chaiwatmat/Messages.properties
@@ -1,5 +1,3 @@
-LineNotifyBuilder.DescriptorImpl.errors.missingName=Please set a name
-LineNotifyBuilder.DescriptorImpl.warnings.tooShort=Is not the name too short?
-LineNotifyBuilder.DescriptorImpl.warnings.reallyFrench=Are you actually French?
-
+LineNotifyBuilder.DescriptorImpl.errors.missingMessage=Please input message
+LineNotifyBuilder.DescriptorImpl.errors.messageShouldNotContainSpace=Message should not contain space
 LineNotifyBuilder.DescriptorImpl.DisplayName=Line notify
